<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serverip"
            android:textSize="15sp"/>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/editServerIP"
                android:textSize="15sp"
                android:textStyle="bold"
                android:outlineSpotShadowColor="@android:color/holo_blue_dark"
                android:hint="127.0.0.1"/>
            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/editPort"
                android:textSize="15sp"
                android:textStyle="bold"
                android:hint="1998"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonChange"
                android:theme="@style/AppTheme.Button"
                android:text="@string/change"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>